--- a/style/index.css
+++ b/style/index.css
@@ -3,7 +3,7 @@ body {
     background-color:#195E71;
     background-size: cover;
     height:100%;
-    width:100%;
+    width:auto;
     margin:0;
     padding:0;
     color:white;
