--- a/style/index.css
+++ b/style/index.css
@@ -3,9 +3,10 @@ body {
     background-color:#195E71;
     background-size: cover;
     height:100%;
-    width:auto;
+    width:80%;
     margin:0;
-    padding:0;
+    padding-left:10%;
+    padding-right:10%;
     color:white;
 }
 
@@ -29,14 +30,14 @@ span {
     padding-right:20px;
 }
 
-img {
-    width:100px;
-    height: auto;
-}
-
 a {
     padding-left:15px;
     padding-right:15px;
+}
+
+img {
+    width:100px;
+    height: auto;
 }
 
 .header {
@@ -59,4 +60,48 @@ a {
 
 .words {
     padding-top:5px;
+}
+
+.footer {
+    position:absolute;
+    right:10px;
+    bottom:0px;
+}
+
+@media screen and (max-width: 880px) {
+    /*.name{
+        width:80%;   
+    }*/
+    
+    h1 {
+        font-size:100%;   
+    }
+    .slide{
+        font-size:75%;
+        text-align: center;
+    }
+    .links img {
+        width:15%;
+    }
+    a{
+        padding-left:5px;
+        padding-right:5px;
+    }
+}
+
+@media handheld and (max-width: 500px) {
+    h1 {
+        font-size:100%;   
+    }
+    .slide{
+        font-size:75%;
+        text-align: center;
+    }
+    .links img {
+        width:15%;
+    }
+    a{
+        padding-left:5px;
+        padding-right:5px;
+    }
 }
