--- a/css/main.css
+++ b/css/main.css
@@ -283,3 +283,33 @@ li {
 .clearfix {
   *zoom:1;
 }
+
+/** ------------------------------------------------------------ */
+
+@media only handheld (max-width: 320px) {
+  .name {
+    max-width:inherit;
+  }
+  .name h1 {
+    font-size:100px;
+  }
+  .scroller p {
+    font-size:60px;
+  }
+  .logo {
+    width:100px;
+    height:100px;
+  }
+  .nav-bar li {
+    padding-bottom:42px;
+    padding-top:35px;
+  }
+  .header {
+    height:100px;
+    font-size:30px;
+  }
+
+  .section {
+    height: 100vh;
+  }
+}
