--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,22 @@ body {
 	font-size: 10pt;
 }
 
+a {
+	text-decoration: none;
+}
+
 h3 {
 	font-size: 25px;
+}
+
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+li {
+	display: inline-block;
 }
 
 .container {
@@ -58,6 +72,48 @@ h3 {
 	width: 0;
 	background: transparent;
 }
+
+
+/* NAV */
+nav {
+	height: 90px;
+	background-color: #DDDDDD;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	box-shadow: 0.5px 2px 2.5px 0.2px rgba(0,0,0,0.25);
+	position: fixed;
+	top:0;
+	width: 100%;
+	z-index: 1;
+}
+
+nav > div {
+	flex: 1;
+}
+
+.logo-name {
+	color: #000000;
+	font-size: 18pt;
+	transition: color 0.15s ease;
+}
+
+.logo-name:hover {
+	color: #555555;
+}
+
+.nav-menu a {
+	margin: 0 5px;
+	color: #000000;
+	transition: color 0.15s ease;
+}
+
+.nav-menu a:hover {
+	color: #555555;
+}
+
+/* EXPERIENCE */
 
 .square {
 	float: left;
@@ -118,6 +174,21 @@ h3 {
 @media only screen and (min-width: 600px) {
 	body {
 		font-size: 11pt;
+	}
+
+	nav {
+		height: 40px;
+		flex-direction: row;
+	}
+
+	.left {
+		text-align: left;
+		margin-left: 10px;
+	}
+
+	.right {
+		text-align: right;
+		margin-right: 10px;
 	}
 
 	.headshot {
