--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,7 @@ li {
 
 /* NAV */
 nav {
+	min-width: 340px;
 	height: 90px;
 	background-color: #DDDDDD;
 	display: flex;
@@ -203,21 +204,34 @@ nav > div {
 .pre-overlay {
 	margin: 0;
 	left:-20vw;
-	width:20vw;
+	width:0vw;
 	background: rgba(0,0,0,0.4);
 }
 
 .overlay {
 	margin: 0;
-	right: -80vw;
+	top: -100vh;
 	background: #FFFFFF;
-	width: 80vw;
+	width: 100vw;
 
 
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
+
+.cancel {
+	position: absolute;
+	top: 10px;
+	right: 25px;
+}
+
+.cancel-btn {
+	width: 20px;
+	height: auto;
+	cursor: pointer;
+}
+
 
 .hidden {
 	display: none;
@@ -235,13 +249,13 @@ nav > div {
 }
 
 @keyframes fadeInRight {
-	0% {opacity: 0; right: -80vw;}
-	100% {opacity: 1; right:0;}
+	0% {opacity: 0; top: -100vh;}
+	100% {opacity: 1; top:0;}
 }
 
 @keyframes fadeOutRight {
-	from {opacity: 1; right:0;}
-	to {opacity: 0; right: -80vw;}
+	from {opacity: 1; top:0;}
+	to {opacity: 0; top: -100vh;}
 }
 
 @media only screen and (min-width: 600px) {
@@ -274,6 +288,43 @@ nav > div {
 
 	.square {
 		width: 50%;
+	}
+}
+
+@media only screen and (min-width: 800px) {
+	.cancel {
+		right: 10px;
+	}
+
+	.pre-overlay {
+		left:-20vw;
+		width:20vw;
+	}
+
+	.overlay {
+		top: 0;
+		right: -80vw;
+		width: 80vw;
+	}
+
+	@keyframes fadeInLeft {
+		0% {opacity: 0; left: -20vw;}
+		100% {opacity: 1; left:0;}
+	}
+
+	@keyframes fadeOutLeft {
+		from {opacity: 1; left:0;}
+		to {opacity: 0; left: -20vw;}
+	}
+
+	@keyframes fadeInRight {
+		0% {opacity: 0; right: -80vw;}
+		100% {opacity: 1; right:0;}
+	}
+
+	@keyframes fadeOutRight {
+		from {opacity: 1; right:0;}
+		to {opacity: 0; right: -80vw;}
 	}
 }
 
