--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,8 @@ nav > div {
 
 .img-wrapper {
 	vertical-align: baseline;
+
+	margin: 20px;
 }
 
 .exp-img {
@@ -142,7 +144,7 @@ nav > div {
 .exp-words {
 	opacity: 0;
 	background: radial-gradient(rgba(20, 20, 20, 0.5), rgba(0, 0, 0, 0.9));
-	height: 100%;
+	/*height: 100%;*/
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -151,6 +153,8 @@ nav > div {
 	transition: opacity 0.07s ease-in;
 	vertical-align: baseline;
 	text-align: center;
+
+	margin: 20px;
 }
 
 .exp-words::before {
@@ -239,9 +243,9 @@ nav > div {
 	max-width: 800px;
 }
 
-.overlay-p {
-	/*margin: 25px 80px;*/
-}
+/*.overlay-p {
+	margin: 25px 80px;
+}*/
 
 .overlay-img {
 	/*max-width: 800px;*/
