--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
 	min-width: 340px;
 	margin: 0;
-	background-color: #EEEEEE;
+	background-color: #E8F1F5;
 	font-family: 'Ubuntu', sans-serif;
 	text-transform: uppercase;
 	font-size: 10pt;
@@ -134,6 +134,8 @@ nav > div {
 	vertical-align: baseline;
 
 	margin: 20px;
+
+	box-shadow: 0px 0px 7px 3px rgba(0,0,0,0.25);
 }
 
 .exp-img {
@@ -176,6 +178,8 @@ nav > div {
 .center h3 {
 	color: #FFF;
 }
+
+/* OVERLAY */
 
 .modal {
 	animation-fill-mode: forwards;
@@ -224,6 +228,15 @@ nav > div {
 	align-items: center;
 }
 
+.modal-dialog {
+	overflow-y: initial !important;
+}
+
+.modal-body {
+	height: 100vh !important;
+	overflow-y: auto;
+}
+
 .inner-overlay {
 	display: flex;
 	flex-direction: column;
@@ -236,6 +249,8 @@ nav > div {
 	text-transform: none;
 	font-size: 15px;
 	letter-spacing: 1pt;
+
+	line-height: 2;
 }
 
 .inner-overlay > * {
