--- a/assets/stylesheets/index.scss
+++ b/assets/stylesheets/index.scss
@@ -2,14 +2,28 @@ body {
   margin: 0;
   font-family: 'Lato', sans-serif;
   background-color: #F5F5F5;
+
+  min-height: 650px;
 }
 
 h1 {
   font-weight: 700;
+  margin: 0;
 }
 
 p {
   font-weight: 300;
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 .container {
@@ -23,6 +37,27 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    .content-name {
+      margin: 15px 0;
+    }
+
+    .content-links {
+      margin: 15px 0;
+
+      .content-item {
+        display: inline;
+        padding: 0 5px;
+      }
+    }
+
+    .content-footer {
+      text-align: center;
+      margin-bottom: 5px;
+      width: 100%;
+      position: fixed;
+      bottom: 0;
+    }
   }
 
   .container-right {
@@ -33,9 +68,11 @@ p {
     .cover-image {
       position: absolute;
       width: 100%;
+      height: 100%;
       margin: auto;
       top: -50%;
       bottom: -50%;
+      object-fit: cover;
     }
   }
 }
@@ -47,23 +84,9 @@ p {
 
     .container-left {
       grid-row: unset;
-    }
 
-    .container-right {
-      .cover-image {
-        height: 100%;
-        width: auto;
-      }
-    }
-  }
-}
-
-@media only screen and (min-width: 1198px) {
-  .container {
-    .container-right {
-      .cover-image {
-        width: 100%;
-        height: auto;
+      .content-footer {
+        width: 50%;
       }
     }
   }
