--- a/views/lost.erb
+++ b/views/lost.erb
@@ -8,7 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet">
     <link rel="stylesheet" href="/index.css" />
-    <% erb :analytics %>
+    <% if settings.production? %>
+      <% erb :analytics %>
+    <% end %>
   </head>
   <body>
     Lost
