--- a/views/lost.erb
+++ b/views/lost.erb
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet">
     <link rel="stylesheet" href="/index.css" />
-    <% if settings.production? %>
-      <% erb :analytics %>
+    <% if Sinatra::Base.production? %>
+      <%= erb :analytics %>
     <% end %>
   </head>
   <body>
