Update website description

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>theodore.tan</title>
     <meta name="author" name="Theodore Tan">
-    <meta name="description" content="The personal website of Theodore Tan. Full stack developer currently working as a Frontend Developer Intern at Shopify">
+    <meta name="description" content="The personal website of Theodore Tan. Full stack developer currently working as a Frontend Developer at Shopify">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet">
     <link rel="stylesheet" href="/index.css" />
@@ -20,7 +20,7 @@
           <h1>Theodore Tan</h1>
         </div>
         <div class="content-description">
-          <p>Front-end Developer at Shopify</p>
+          <p>Frontend Developer at Shopify</p>
         </div>
         <div class="content-links">
           <ul class="content-list">
